@startuml

class Ticket {
  +Id: int
  +Title: string
  +Description: string
  +Status: string
  +CreatedAt: DateTime
  +UpdatedAt: DateTime
  +UserId: int
  +TecRegisterId: int
}

class User {
  +Id: int
  +Name: string
  +Email: string
  +PasswordHash: string
  +Role: string
}

class Message {
  +Id: int
  +Content: string
  +Timestamp: DateTime
  +UserId: int
  +TicketId: int
}

class Spec {
  +Id: int
  +Name: string
  +Description: string
}

class TicketSpecRelation {
  +Id: int
  +TicketId: int
  +SpecId: int
}

class TecRegister {
  +Id: int
  +Name: string
  +Email: string
  +Area: string
  +SpecId: int
}

User "1" -- "0..*" Ticket : cria >
User "1" -- "0..*" Message : envia >
Ticket "1" -- "0..*" Message : contém >
Ticket "1" -- "0..*" TicketSpecRelation : possui >
Spec "1" -- "0..*" TicketSpecRelation : relacionado >
TecRegister "1" -- "1" Spec : possui >
Ticket "1" -- "1" TecRegister : técnico >

@enduml
